# synapse

./: .gitignore  Cargo.toml  README.md
src/: brain.rs  lib.rs  neural_network.rs  neuron.rs
synapse/: Cargo.toml
synapse/src/: brain.rs  lib.rs  neural_network.rs  neuron.rs  synapse.rs  synapse.rs.bak  synapse.rs.save  utils.rs
synapse_test/: Cargo.toml
synapse_test/src/: main.rs
tests/: neural_network_xor.rs
